# cosypose

./: CMakeLists.txt  README.md  cosypose_test.py  package.xml  requirements.txt  requirements2.txt
cosypose/: __init__.py  config.py  cosypose_detector.py  cosypose_inference.py
cosypose/datasets/: datasets_cfg.py
cosypose/models/: pose.py
cosypose/simulator/: base_scene.py
scripts/: result.txt  test.py  test_cosypose_detector.py
